--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "url": "https://github.com/Epsilondelta-ai/frontend-utils.git"
   },
   "source": "index.ts",
-  "main": "index.js",
-  "module": "index.mjs",
-  "types": "index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "targets": {
     "main": {
       "isLibrary": true,
@@ -24,9 +24,9 @@
   },
   "exports": {
     ".": {
-      "require": "./index.js",
-      "import": "./index.mjs",
-      "types": "./index.d.ts"
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
     },
     "./package.json": "./package.json"
   },
@@ -35,6 +35,7 @@
     "build": "parcel build"
   },
   "devDependencies": {
+    "@parcel/bundler-library": "^2.16.0",
     "@parcel/packager-ts": "^2.16.0",
     "@parcel/transformer-typescript-types": "^2.16.0",
     "@types/bun": "latest",
